fix horizontal scrolling of document list on mobile

--- a/css/litewrite.css
+++ b/css/litewrite.css
@@ -23,7 +23,7 @@ aside {
 	position:fixed; width:16%; min-width:135px; height:100%;
 	font:90% FreeSans,Helvetica,sans-serif;
 	opacity:0; -webkit-transition:opacity 300ms; -moz-transition:opacity 300ms; -o-transition:opacity 300ms; transition:opacity 300ms;
-	overflow-y:auto; overflow-x:hidden; /* prevent horizontal scrolling */
+	overflow:hidden; /* prevent scrolling, done in .entries */
 	-moz-user-select:none; -webkit-user-select:none; -ms-user-select:none;
 	-webkit-overflow-scrolling:touch; /* enable native smooth scrolling on iOS */
 }
@@ -35,13 +35,17 @@ aside a, .add {
 	white-space:nowrap; overflow:hidden;
 }
 
-.add { position:relative; display:inline-block; font-weight:normal; color:#999; width:100%; padding:1.5em 1.2em; }
+.add { position:relative; display:inline-block; font-weight:normal; color:#999; width:85%; padding:1.5em 1.2em; }
 .add:hover, .add:focus { color:#000; }
 	.add .add-plus, .add .add-text { position:absolute; -webkit-transition:opacity 200ms; -moz-transition:opacity 200ms; -o-transition:opacity 200ms; transition:opacity 200ms; }
 	.add .add-plus { opacity:1; font-size:160%; top:.51em; } .add:hover .add-plus { opacity:0; }
 	.add .add-text { opacity:0; font-weight:bold; color:#000; } .add:hover .add-text { opacity:1; }
 
-.entries { height:100%; overflow-x:hidden !important; margin:0; padding:0; list-style:none; }
+.entries {
+	height:100%; display:block; margin:0; padding:0;
+	overflow-y:auto; overflow-x:hidden; /* prevent horizontal scrolling */
+	list-style:none;
+}
 .entries a { text-overflow:ellipsis; height:1.35em; padding:.5em 0 .5em 1.2em; }
 .entries a:hover, .entries a:focus, .entries .selected { color:#000; font-weight:bold; }
 .entries .item:last-child a { padding-bottom:50px; }
